# Ocean-Report

./: .env.template  .gitignore  BEFORE_AFTER.md  LICENSE  README.md  REFACTORING_NOTES.md  config.yaml  example1.py  main.py  ocean-example1.ipynb  pyproject.toml  wind-example1.ipynb  wind-example1.py
.github/workflows/: daily-water-report.yml  test-daily-water-report.yml  test-water-report.yml  tests.yml
_archive/: email_formatter.py
bash-commands/: run-package.sh
configs/: README.md  config.template.yaml  config.yaml  config_with_logging.yaml
docs/: CONFIG_PATH_RESOLUTION.md  EMAIL_PREVIEW_GUIDE.md  EMAIL_PREVIEW_QUICKREF.md  LOGGING_GUIDE.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  api_client_factory_examples.md  application_context_factory_examples.py  application_context_factory_quickref.md  application_context_factory_summary.md  architecture_v2.md
docs/architecture/: README.md  api_client.md  application.md  config.md  emailer.md  endpoints.md  logger.md  models.md  services.md  use_cases.md  utils.md  workflows.md
docs/guides/: README.md  api-client-factory.md  application-context-factory.md  config-setup.md  email-preview.md  logging.md
docs/implementions/: LOGGER_ARCHITECTURE.md  LOGGER_GUIDE.md  LOGGER_IMPLEMENTATION_SUMMARY.md  LOGGER_QUICKREF.md  README.md  api_client_factory_design.md  application_context_factory_design.md  application_context_factory_examples.py
endpoints-old/: tide.py  water_temp.py  wind.py
examples/: render_template_example.py
notebooks/: README.md  ocean-example1.ipynb  run.ipynb  test.ipynb  wind-example1.ipynb
resources/: help.txt
scripts/: demo_logger.py  run-report.py  run_report.py  run_report_no_email.py  run_report_with_logging.py  test_config_logging.py
templates/: example-email.txt  ocean-report-email-note.j2  ocean-report-email-v1.j2  ocean-report-email-v2.j2  ocean-report-email.j2
tests/: __init__.py  test_api_client.py  test_api_client_factory.py  test_application_context_factory.py  test_config.py  test_email_formatter.py  test_email_sender.py  test_end_to_end.py  test_endpoints_stations.py  test_endpoints_water_temperature.py  test_error_messages.py  test_gist_url.py  test_integration_real_apis.py  test_models_noaa_water_temperature.py  test_ndbc_integration.py  test_noaa_data.py  test_noaa_integration.py  test_open_meto.py  test_openmeteo_integration.py  test_performance.py  test_tide_service.py  test_use_cases_email.py  test_use_cases_tides.py  test_use_cases_water_temperature.py  test_use_cases_wind.py  test_water_temp_service.py  test_wind.py  test_wind_service.py  test_workflows_email.py  test_workflows_fetcher.py  test_workflows_formatter.py
(+111 files in other folders)
