[project]
name = "lbi-surf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick-Benelli", email = "31021342+nick-benelli@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts]
lbi-surf = "lbi_surf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
