[project]
name = "ocean-report"
version = "0.1.0"
description = "Pulls ocean and wind data and generates a report to be emailed."
readme = "README.md"
authors = [
    { name = "Nick-Benelli", email = "31021342+nick-benelli@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.6.15",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts] 
ocean-report = "ocean_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
