[project]
name = "ocean-report"
version = "0.1.0"
description = "Pulls ocean and wind data and generates a report to be emailed."
readme = "README.md"
authors = [
    { name = "Nick-Benelli", email = "31021342+nick-benelli@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.6.15",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "pydantic>=2.13.4",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts] 
ocean-report = "ocean_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "performance: marks tests as performance/speed tests",
    "benchmark: marks tests as detailed performance benchmarks",
    "error_quality: marks tests that verify error message quality",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ocean_report"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
